<resources>
    <string name="app_name">RKStore</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_an_account">Do Not Have An Account?</string>
    <string name="enter_username1">Enter Username</string>
    <string name="enter_password1">Enter Password</string>

</resources>